Fix --single-process --disable-gpu combination not to hit asserts

Chromium always gives permission to create an in-process GPU thread
when using --single-process mode, despite having passed --disable-gpu
switch (for example in ANGLE case).

Remove the condition that gave special treatment to --single-process
mode in disable-gpu mode.

Task-number: QTBUG-69491
Change-Id: I8c7edfe38b9c1716cd226b1e0aac8cc5b99d9c78
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>